--- a/index.html
+++ b/index.html
@@ -4,9 +4,153 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal CV</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
+        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+      <div class="container">
+      <div class="Left_side">
+        <div class="profileText">
+            <div class="imgBx">
+                <img src="1.jpg">
+            </div>
+            <h2>Gusev Artyom<br><span>Junior Frontend Developer</span></h2>
+        </div>
+        <div class="contactInfo">
+            <h3 class="title">Contact information</h3>
+            <ul>
+                <li>
+                    <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                    <span class="text">+7 958-801-00-98</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                    <span class="text">gusev.7ema@yandex.ru</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-telegram" aria-hidden="true"></i></span>
+                    <span class="text">@Gusar_654</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+                    <span class="text">Gusev-712</span>
+                </li>
+            </ul>
+        </div>
+        <div class="contactInfo education">
+            <h3 class="title">Education</h3>
+            <ul>
+                <li>
+                    <span class="icon"><i class="fa fa-university" aria-hidden="true"></i></span>
+                    <span class="text">Scientific Research Nuclear University MEPHI: 
+                                       Faculty of information security (second year)
+                    </span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
+                    <span class="text">RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
+                    <span class="text">Database Analyst Courses at the Scientific Research Nuclear University MEPHI</span>
+                </li>
+            </ul>
+        </div>
+        <div class="contactInfo language">
+            <h3 class="title">Languages</h3>
+            <ul>
+                <li>
+                    <span class="icon"><i class="fa fa-language" aria-hidden="true"></i></span>
+                    <span class="text">English</span>
+                    <span class="percent">
+                        <div style="width: 75%;"></div>
+                    </span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-language" aria-hidden="true"></i></span>
+                    <span class="text">French</span>
+                    <span class="percent">
+                        <div style="width: 55%;"></div>
+                    </span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-language" aria-hidden="true"></i></span>
+                    <span class="text">Russian</span>
+                    <span class="percent">
+                        <div style="width: 95%;"></div>
+                    </span>
+                </li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="Right_side">
+        <div class="about">
+            <h2 class="title2">Personal qualities</h2>
+            <p>I am a first-year student at a nuclear research university.
+                Today I want to learn how to create useful and interesting 
+                applications which will help people and make their lives easier.<br><br>
+                Also I really enjoy working in a team because I can find common 
+                ground with anyone. It is so important for me to find a friendly 
+                industrious team, with which I be able to create more complex and 
+                useful projects.
+            </p>
+        </div>
+        <div class="about">
+            <h2 class="title2">Skills and Proficiency</h2>
+            <ul>
+                <li>
+                    <span class="icon"><i class="fa fa-html5" aria-hidden="true"></i></span>
+                    <span class="text">HTML, CSS, JavaScript, TypeScript</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    <span class="text">Python, C lang, Java</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-database" aria-hidden="true"></i></span>
+                    <span class="text">SQL, PostgreSQL, MicrosoftSQL</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-gitlab" aria-hidden="true"></i></span>
+                    <span class="text">Git, Github, GitLab, Visual Studio Code</span>
+                </li>
+            </ul>
+        </div>
+        <div class="code">
+            <h2 class="title2">Code examples</h2>
+            <pre>
+                <code>
+                    .code pre code
+                    {
+                       position: relative;
+                       width: 100%;
+                       max-width: 500px;
+                       min-height: 150px;
+                       margin: 50px;
+                       background: rgba(107, 96, 85, 255);
+                       border-radius: 30px;
+                       display: grid;
+                       grid-template-columns: 1fr 2fr;
+                       box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
+                       color: rgba(255, 249, 230, 255);
+                    } 
+                </code>
+            </pre>
+        </div>
+        <div class="about interest">
+            <h2 class="title2">Interest</h2>
+            <ul>
+                <li><i class="fa fa-snowflake-o" aria-hidden="true"></i>Hockey</li>
+                <li><i class="fa fa-anchor" aria-hidden="true"></i>Fishing</li>
+                <li><i class="fa fa-flask" aria-hidden="true"></i>Physics</li>
+                <li><i class="fa fa-book" aria-hidden="true"></i>History</li>
+            </ul>
+        </div>
+      </div>
+      </div>
 </body>
 </html>
